feat: api design
