# cocksearcher/views/v1/schemas/__init__.py
@@ -1,6 +1,9 @@
 from drf_spectacular.types import OpenApiTypes
 
+from cocksearcher.views.v1.serializers.cocktail_list import Sort
+
 OPENAPI_TYPES = {
     int: OpenApiTypes.NUMBER,
-    str: OpenApiTypes.STR
+    str: OpenApiTypes.STR,
+    Sort: OpenApiTypes.STR
 }
