# cocksearcher/views/v1/today_cocktail.py
@@ -2,7 +2,7 @@ from drf_spectacular.utils import extend_schema
 from rest_framework.request import Request
 from rest_framework.views import APIView
 
-from cocksearcher.views.v1.schemas.today_cocktail import today_cocktail_params
+from cocksearcher.views.v1.schemas.params import today_cocktail_params
 from cocksearcher.views.v1.serializers.today_cocktail import TodayCocktailSerializer
 
 
@@ -11,7 +11,8 @@ class TodayCocktailView(APIView):
     serializer_class = TodayCocktailSerializer
 
     @extend_schema(
-        tags=["칵테일"],
+        operation_id="today_cocktail",
+        tags=["cocktail"],
         parameters=today_cocktail_params
     )
     def get(self, request: Request):
